--- a/ClassLibrary1/PL/Web.config
+++ b/ClassLibrary1/PL/Web.config
@@ -46,7 +46,7 @@
   </hibernate-configuration>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=ERMOLAEVM;Initial Catalog=NewMyDB;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
-    <!--<add name="test" connectionString="Data Source=ERMOLAEVM;Initial Catalog=InvestDB;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />-->
+    <add name="test" connectionString="Data Source=ERMOLAEVM;Initial Catalog=InvestDB;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
