--- a/ClassLibrary1/TestingNhibernateMapping/TestingNhibernateMapping.csproj
+++ b/ClassLibrary1/TestingNhibernateMapping/TestingNhibernateMapping.csproj
@@ -4,15 +4,17 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5CC7B26B-6E20-477B-8DEA-082BE73F7F84}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{6AF38746-4206-4A0F-A153-09439596600C}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DAL</RootNamespace>
-    <AssemblyName>DAL</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <RootNamespace>TestingNhibernateMapping</RootNamespace>
+    <AssemblyName>TestingNhibernateMapping</AssemblyName>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -22,6 +24,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -35,7 +38,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.AspNet.Identity.Core, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.AspNet.Identity.Core.2.2.1\lib\net45\Microsoft.AspNet.Identity.Core.dll</HintPath>
+      <HintPath>..\packages\Microsoft.AspNet.Identity.Core.2.2.0\lib\net45\Microsoft.AspNet.Identity.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="NHibernate, Version=4.0.0.4000, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
@@ -47,7 +50,6 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -57,54 +59,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ApplicationManager\ApplicationRoleManager.cs" />
-    <Compile Include="ApplicationManager\ApplicationUserManager.cs" />
-    <Compile Include="Entities\Column.cs" />
-    <Compile Include="Entities\ColumnFormat.cs" />
-    <Compile Include="Entities\Format.cs" />
-    <Compile Include="Entities\Profile.cs" />
-    <Compile Include="Entities\Record.cs" />
-    <Compile Include="Entities\Role.cs" />
-    <Compile Include="Entities\Customer.cs" />
-    <Compile Include="Entities\Portfolio.cs" />
-    <Compile Include="Entities\Position.cs" />
-    <Compile Include="Entities\View.cs" />
-    <Compile Include="Entities\Views\SymbolDividend.cs" />
-    <Compile Include="Entities\Views\TradeInforamation.cs" />
-    <Compile Include="Entities\Views\TradeSybolView.cs" />
-    <Compile Include="Entities\ViewTemplate.cs" />
-    <Compile Include="Entities\ViewTemplateColumn.cs" />
-    <Compile Include="Entities\Views\SymbolView.cs" />
-    <Compile Include="Enums\DateFormats.cs" />
-    <Compile Include="Enums\Entities.cs" />
-    <Compile Include="Enums\Operations.cs" />
-    <Compile Include="Enums\Sorting.cs" />
-    <Compile Include="Enums\Symbols .cs" />
-    <Compile Include="Enums\TemplatePositions.cs" />
-    <Compile Include="Enums\TradeStatuses.cs" />
-    <Compile Include="Enums\TradeTypes.cs" />
-    <Compile Include="Interfaces\IColumnFormatRepository.cs" />
-    <Compile Include="Interfaces\IColumnRepository.cs" />
-    <Compile Include="Interfaces\ICustomerRepository.cs" />
-    <Compile Include="Interfaces\IFormatRepository.cs" />
-    <Compile Include="Interfaces\IPortfolioRepository.cs" />
-    <Compile Include="Interfaces\IPositionRepository.cs" />
-    <Compile Include="Interfaces\IProfileRepository.cs" />
-    <Compile Include="Interfaces\IRecordRepository.cs" />
-    <Compile Include="Interfaces\IRepository.cs" />
-    <Compile Include="Interfaces\ISymbolDividendRepository.cs" />
-    <Compile Include="Interfaces\ISymbolViewRepository.cs" />
-    <Compile Include="Interfaces\ITradeSybolRepository.cs" />
-    <Compile Include="Interfaces\IUnitOfWork.cs" />
-    <Compile Include="Interfaces\IViewRepository.cs" />
-    <Compile Include="Interfaces\IViewTemplateColumnRepository.cs" />
-    <Compile Include="Interfaces\IViewTemplateRepository.cs" />
+    <Compile Include="NHibernateSessionFactory.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Entities\User.cs" />
+    <Compile Include="StoreDbInitializer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ClassLibrary1\DAL.csproj">
+      <Project>{5cc7b26b-6e20-477b-8dea-082be73f7f84}</Project>
+      <Name>DAL</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
