--- a/ClassLibrary1/ClassLibrary1/packages.config
+++ b/ClassLibrary1/ClassLibrary1/packages.config
@@ -5,4 +5,5 @@
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net452" />
   <package id="NHibernate" version="4.0.3.4000" targetFramework="net452" />
   <package id="NHibernate.AspNet.Identity" version="2.2.1.0" targetFramework="net452" />
+  <package id="NHibernate.Identity" version="0.5.0" targetFramework="net452" />
 </packages>
