--- a/ClassLibrary1/PL/bin/PL.dll.config
+++ b/ClassLibrary1/PL/bin/PL.dll.config
@@ -41,12 +41,12 @@
       <property name="adonet.batch_size">100</property>
       <property name="default_batch_fetch_size">32</property>
       <property name="query.substitutions">true 1, false 0, yes 'Y', no 'N'</property>
-      <mapping assembly="DAL"/>
+      <mapping assembly="DAL" />
     </session-factory>
   </hibernate-configuration>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=ERMOLAEVM;Initial Catalog=NewMyDB;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
-    <add name="test" connectionString="Data Source=ERMOLAEVM;Initial Catalog=InvestDB;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=ERMOLAEVM;Initial Catalog=FuckingDb;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <add name="test" connectionString="Data Source=ERMOLAEVM;Initial Catalog=FuckingDb;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -110,6 +110,10 @@
       <dependentAssembly>
         <assemblyIdentity name="NHibernate" publicKeyToken="aa95f207798dfdb4" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.1.0.4000" newVersion="4.1.0.4000" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.AspNet.Identity.Core" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.0.0.0" newVersion="2.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
