--- a/ClassLibrary1/TestingNhibernateMapping/App.config
+++ b/ClassLibrary1/TestingNhibernateMapping/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <section name="hibernate-configuration" type="NHibernate.Cfg.ConfigurationSectionHandler, NHibernate" />
@@ -19,7 +19,7 @@
       <property name="adonet.batch_size">100</property>
       <property name="default_batch_fetch_size">32</property>
       <property name="query.substitutions">true 1, false 0, yes 'Y', no 'N'</property>
-      <mapping assembly="DAL"/>
+      <mapping assembly="DAL" />
     </session-factory>
   </hibernate-configuration>
   <connectionStrings>
@@ -28,4 +28,16 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.AspNet.Identity.Core" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.0.0.0" newVersion="2.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="NHibernate" publicKeyToken="aa95f207798dfdb4" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.4000" newVersion="4.0.0.4000" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
