--- a/ClassLibrary1/WebApi/WebApi.csproj
+++ b/ClassLibrary1/WebApi/WebApi.csproj
@@ -248,6 +248,7 @@
     <Compile Include="Results\ChallengeResult.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="Util\AutofacConfig.cs" />
+    <Compile Include="Util\TransactionAttribute.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
