--- a/ClassLibrary1/UnitTests/packages.config
+++ b/ClassLibrary1/UnitTests/packages.config
@@ -3,6 +3,7 @@
   <package id="AutoMapper" version="6.0.2" targetFramework="net452" />
   <package id="Castle.Core" version="4.0.0" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="Iesi.Collections" version="4.0.0.4000" targetFramework="net452" />
   <package id="log4net" version="2.0.8" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net452" />
@@ -17,5 +18,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Moq" version="4.7.9" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net452" />
+  <package id="NHibernate" version="4.0.3.4000" targetFramework="net452" />
+  <package id="NHibernate.AspNet.Identity" version="2.2.1.0" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
 </packages>
