--- a/ClassLibrary1/PL/bin/PL.dll.config
+++ b/ClassLibrary1/PL/bin/PL.dll.config
@@ -8,10 +8,10 @@
     <section name="hibernate-configuration" type="NHibernate.Cfg.ConfigurationSectionHandler, NHibernate" />
 
     <!--<section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />-->
-    <!--<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
-    <section name="glimpse" type="Glimpse.Core.Configuration.Section, Glimpse.Core" />-->
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+    <!--<section name="glimpse" type="Glimpse.Core.Configuration.Section, Glimpse.Core" />-->
   </configSections>
-  <!--<log4net debug="false">
+  <log4net debug="false">
     <appender name="LogFileAppender" type="log4net.Appender.FileAppender">
       <param name="File" value=".\Util\log.txt" />
       <param name="AppendToFile" value="true" />
@@ -24,7 +24,7 @@
       <level value="All" />
       <appender-ref ref="LogFileAppender" />
     </root>
-  </log4net>-->
+  </log4net>
   <hibernate-configuration xmlns="urn:nhibernate-configuration-2.2">
     <session-factory name="Identity">
       <property name="dialect">NHibernate.Dialect.MsSql2008Dialect</property>
@@ -46,7 +46,6 @@
   </hibernate-configuration>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=ERMOLAEVM;Initial Catalog=FuckingDb;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
-    <add name="test" connectionString="Data Source=ERMOLAEVM;Initial Catalog=FuckingDb;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
